--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
           PARAM_FILE_PATH: "${{ inputs.template_folder_path }}/${{ inputs.parameter_file_name }}"
         run: |
           mkdir '${{ env.BUILDFOLDERPATH }}'
-          az bicep build --file ${{ inputs.template_folder_path }}/${{ inputs.template_file_name }}.bicep --outdir '${{ env.BUILDFOLDERPATH }}/main.json'
+          az bicep build --file ${{ env.BUILDFOLDERPATH }}/${{ inputs.template_file_name }}.bicep --outdir '${{ env.BUILDFOLDERPATH }}/main.json'
 
           if ("${{ inputs.mode }}" -ne "operations"){
             if ("${{ env.PARAM_FILE_PATH }}" -like "*.bicepparam"){
@@ -121,7 +121,7 @@ jobs:
           }
           if ("${{ inputs.mode }}" -eq "operations" && "${{ inputs.parameter_file_name }}" -ne "" ){
             if ("${{ env.PARAM_FILE_PATH }}" -like "*.bicepparam"){
-                bicep build-params "${{ env.PARAM_FILE_PATH }}" --outfile "${{ env.BUILDFOLDERPATH }}//parameters.json"
+                bicep build-params "${{ env.PARAM_FILE_PATH }}" --outfile "${{ env.BUILDFOLDERPATH }}/parameters.json"
                 }
             elseif ("${{ env.PARAM_FILE_PATH }}" -like "*.json"){
                 Copy-Item -Path "${{ env.PARAM_FILE_PATH }}" -Destination '${{ env.BUILDFOLDERPATH }}/parameters.json'
