--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,8 @@ jobs:
                 Copy-Item -Path "${{ env.PARAM_FILE_PATH }}" -Destination '${{ env.BUILDFOLDERPATH }}/parameters.json'
               }
           }
+
+          Get-ChildItem ${{ env.BUILDFOLDERPATH }}
         shell: pwsh
 
       - name: Upload artifact for deployment
