--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,15 @@ name: deploy
 on:
   workflow_call:
     inputs:
+      template_file_name:
+        description: "name of the bicep template"
+        type: string
+        required: true
+      parameter_file_name:
+        description: "name of the parameter file"
+        type: string
+        required: false
+        default: ""
       environment:
         description: "github environment for deployment jobs"
         type: string
@@ -78,27 +87,27 @@ jobs:
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
               --subscription ${{ secrets.SUBSCRIPTION_ID }} `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters ${{ runner.workspace }}/deploy/parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "tenant" ){
             az deployment tenant what-if `
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters ${{ runner.workspace }}/deploy/parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "managementgroup" ){
             az deployment mg what-if `
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
               --management-group-id '${{ inputs.management_group_id }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters ${{ runner.workspace }}/deploy/parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "resourcegroup" ){
             az account set --subscription '${{ inputs.subscription_id }}'
             az deployment group what-if `
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --resource-group '${{ inputs.resource_group_name }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters ${{ runner.workspace }}/deploy/parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
             }
         shell: pwsh
 
