--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -122,27 +122,27 @@ jobs:
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
               --subscription '${{ secrets.SUBSCRIPTION_ID }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "tenant" ){
             az deployment tenant what-if `
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "managementgroup" ){
             az deployment mg what-if `
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
               --management-group-id '${{ inputs.management_group_id }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
             if ('${{ inputs.az_deployment_type }}' -eq "resourcegroup" ){
               az account set --subscription '${{ secrets.SUBSCRIPTION_ID }}'
               az deployment group what-if `
                 --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
                 --resource-group '${{ inputs.resource_group_name }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json --parameters parameters.json
+                --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
             }
         shell: pwsh
 
@@ -183,30 +183,27 @@ jobs:
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
               --subscription $subId `
-              --template-file ${{ runner.workspace }}/deploy/main.json `
-              --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "tenant" ){
             az deployment tenant create `
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json `
-              --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "managementgroup" ){
           az deployment mg create `
             --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
             --location '${{ inputs.location }}' `
             --management-group-id '${{ inputs.management_group_id }}' `
-            --template-file ${{ runner.workspace }}/deploy/main.json --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "resourcegroup" ){
             az account set --subscription '${{ secrets.SUBSCRIPTION_ID }}'
             az deployment group create `
               --name '${{ inputs.deployment_name }}-${{ env.current_time }}' `
               --resource-group '${{ inputs.resource_group_name }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json `
-              --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
         shell: pwsh
 
@@ -227,24 +224,21 @@ jobs:
             az deployment tenant create `
               --name '${{ inputs.deployment_name }}_${{ env.current_time }}' `
               --location '${{ inputs.location }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json `
-              --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "managementgroup" ){
           az deployment mg create `
             --name '${{ inputs.deployment_name }}_${{ env.current_time }}' `
             --location '${{ inputs.location }}' `
             --management-group-id '${{ inputs.management_group_id }}' `
-            --template-file ${{ runner.workspace }}/deploy/main.json `
-            --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
           if ('${{ inputs.az_deployment_type }}' -eq "resourcegroup" ){
             az account set --subscription '${{ secrets.SUBSCRIPTION_ID }}''
             az deployment group create `
               --name '${{ inputs.deployment_name }}_${{ env.current_time }}' `
               --resource-group '${{ inputs.resource_group_name }}' `
-              --template-file ${{ runner.workspace }}/deploy/main.json `
-              --parameters parameters.json
+              --template-file ${{ runner.workspace }}/deploy/${{ inputs.template_file_name }}.json --parameters ${{ runner.workspace }}/deploy/${{ inputs.parameter_file_name }}.parameters.json
           }
         shell: pwsh
 
