--- a/.github/workflows/deploy-code.yml
+++ b/.github/workflows/deploy-code.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Prepare build directory
         run: |
           mkdir ${{ runner.temp }}/${{ env.build_folder }}
-          Compress-Archive -Path ${{ runner.workspace }}/${{ env.fa_code_path }} -DestinationPath ${{ runner.temp }}/${{ env.build_folder }}/fa-code.zip 
+          Compress-Archive -Path ${{ env.fa_code_path }} -DestinationPath ${{ runner.temp }}/${{ env.build_folder }}/fa-code.zip 
           ls
         shell: pwsh
 
