--- a/.github/workflows/deploy-code.yml
+++ b/.github/workflows/deploy-code.yml
@@ -30,20 +30,11 @@ jobs:
       - name: 'Checkout gitHub action'
         uses: actions/checkout@v3
 
-      - name: Prepare build directory
-        run: |
-          mkdir ${{ runner.temp }}/${{ env.build_folder }}
-          Compress-Archive -Path ${{ env.fa_code_path }} -DestinationPath ${{ runner.temp }}/${{ env.build_folder }}/fa-code.zip 
-          ls
-        shell: pwsh
-
       - name: Upload artifact for deployment
-        env:
-          BUILDFOLDERPATH: ${{ runner.temp }}/${{ env.build_folder }}/fa-code.zip 
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifact
-          path: ${{ env.BUILDFOLDERPATH }}
+          name: fa-code
+          path: ${{ env.fa_code_path }}
       
   deploy_code:
     runs-on: ubuntu-latest
@@ -64,7 +55,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
-          name: build-artifact
+          name: fa-code
           path: ${{ runner.workspace }}/deploy
 
       - name: Authenticate to Azure
