--- a/.github/workflows/deploy-code.yml
+++ b/.github/workflows/deploy-code.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Deploy function app
         run: |
-          ls
+          ls ${{ runner.temp }}/deploy
           az functionapp deployment source config-zip -g ${{ inputs.function_app_rg }} -n ${{ inputs.function_app_name }} --src ${{ runner.temp }}/deploy/fa-code.zip --verbose
             
       - name: 'Cleanup deploy folder'
